--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
 	"files.associations": {
 		"minishell.h": "c",
-		"type_traits": "c"
+		"type_traits": "c",
+		"errno.h": "c",
+		"libft.h": "c",
+		"ft_printf.h": "c"
 	}
 }
