--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,6 @@
 {
 	"files.associations": {
 		"minishell.h": "c",
-		"type_traits": "c"
-		"type_traits": "c",
-		"errno.h": "c",
-		"libft.h": "c",
-		"ft_printf.h": "c"
-	},
-	"cSpell.words": [
-		"argve"
-	]
+		"readline.h": "c"
+	}
 }
